--- a/src/classes/CparenthesisOperation.cls
+++ b/src/classes/CparenthesisOperation.cls
@@ -1,16 +1,18 @@
 /**
  * @Author	:	Jitendra Zaa
  * @Date	:	25-March-2017
- * @Desc	:	Classes to implement BPM (Business Process Management ) rule engine 
- * */
-public class CparenthesisOperation extends Operation{
-    
-     public CparenthesisOperation()
+ * @Desc	:	Classes to implement BPM (Business Process Management ) rule engine
+ **/
+public class CparenthesisOperation
+    extends Operation
+{
+    public CparenthesisOperation()
     {
         super(')');
-    } 
-    public override Boolean resolve(BaseType a,BaseType b){
-        return null; 
-    } 
+    }
 
+    public override Boolean resolve(BaseType a,BaseType b)
+    {
+        return null;
+    }
 }
