--- a/src/classes/OparenthesisOperation.cls
+++ b/src/classes/OparenthesisOperation.cls
@@ -1,16 +1,16 @@
 /**
- * Opening parenthesis 
- * */
-public class OparenthesisOperation extends Operation{
-    
-     public OparenthesisOperation()
+ * Opening parenthesis
+ **/
+public class OparenthesisOperation
+    extends Operation
+{
+    public OparenthesisOperation()
     {
         super('(');
     }
- 
-    
-    public override Boolean resolve(BaseType a,BaseType b){
-        return null; 
-    } 
 
+    public override Boolean resolve(BaseType a, BaseType b)
+    {
+        return null;
+    }
 }
