--- a/src/classes/Operation.cls
+++ b/src/classes/Operation.cls
@@ -3,20 +3,21 @@
  * @Date	:	25-March-2017
  * @Desc	:	Classes to implement BPM (Business Process Management ) rule engine
  * 	 		:	Simple Marker interface to achieve run time polymorphism
- * */
-public abstract class Operation implements Expression
-{ 
-    
-    protected String symbol;  
+ **/
+public abstract class Operation
+    implements Expression
+{
+    protected String symbol;
 
-    public Operation(String symbol)  
+    public Operation(String symbol)
     {
         this.symbol = symbol;
-    } 
- 	public abstract Boolean resolve(BaseType a,BaseType b);
- 
+    }
+
+ 	public abstract Boolean resolve(BaseType a, BaseType b);
+
     public String getSymbol()
     {
         return this.symbol;
-    } 
+    }
 }
